FIX: Adjust for overlap in AI buttons

--- a/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
+++ b/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
@@ -262,6 +262,10 @@
   }
 }
 
+#reply-control .showing-ai-suggestions .category-chooser {
+  max-width: calc(100% - 41px); // width of AI button
+}
+
 .suggest-tags-button,
 .suggest-category-button {
   display: block;
